<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:textColor="@color/black"
        android:layout_marginTop="80dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"
        android:layout_marginBottom="72dp"
        android:text="@string/enter_pin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pinCircle1"
        />

    <View
        app:layout_constraintHorizontal_chainStyle="packed"
        android:id="@+id/pinCircle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pin_circle"
        app:layout_constraintWidth="16dp"
        app:layout_constraintHeight="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/pinCircle2"
        app:layout_constraintBottom_toTopOf="@id/pinPad"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        />

    <View
        android:id="@+id/pinCircle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pin_circle"
        app:layout_constraintWidth="16dp"
        app:layout_constraintHeight="16dp"
        app:layout_constraintTop_toTopOf="@id/pinCircle1"
        app:layout_constraintLeft_toRightOf="@id/pinCircle1"
        app:layout_constraintRight_toLeftOf="@id/pinCircle3"
        android:layout_marginEnd="32dp"
        />

    <View
        android:id="@+id/pinCircle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pin_circle"
        app:layout_constraintWidth="16dp"
        app:layout_constraintHeight="16dp"
        app:layout_constraintTop_toTopOf="@id/pinCircle1"
        app:layout_constraintLeft_toRightOf="@id/pinCircle2"
        app:layout_constraintRight_toLeftOf="@id/pinCircle4"
        android:layout_marginEnd="32dp"
        />

    <View
        android:id="@+id/pinCircle4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pin_circle"
        app:layout_constraintWidth="16dp"
        app:layout_constraintHeight="16dp"
        app:layout_constraintTop_toTopOf="@id/pinCircle1"
        app:layout_constraintLeft_toRightOf="@id/pinCircle3"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pinPad"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/pinCircle1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="450dp">

        <Button
            style="@style/PinPadButton"
            android:id="@+id/button1"
            android:text="@string/number_1"
            app:layout_constraintBottom_toTopOf="@id/button4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button2"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            style="@style/PinPadButton"
            android:id="@+id/button2"
            android:text="@string/number_2"
            app:layout_constraintBottom_toTopOf="@id/button5"
            app:layout_constraintEnd_toStartOf="@id/button3"
            app:layout_constraintStart_toEndOf="@+id/button1"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            style="@style/PinPadButton"
            android:id="@+id/button3"
            android:text="@string/number_3"
            app:layout_constraintBottom_toTopOf="@id/button6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="parent"
            />


        <Button
            style="@style/PinPadButton"
            android:id="@+id/button4"
            android:text="@string/number_4"
            app:layout_constraintBottom_toTopOf="@id/button7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button5"
            app:layout_constraintTop_toBottomOf="@id/button1" />
        <Button
            style="@style/PinPadButton"
            android:id="@+id/button5"
            android:text="@string/number_5"
            app:layout_constraintBottom_toTopOf="@id/button8"
            app:layout_constraintEnd_toStartOf="@id/button6"
            app:layout_constraintStart_toEndOf="@id/button4"
            app:layout_constraintTop_toBottomOf="@id/button2" />
        <Button
            style="@style/PinPadButton"
            android:id="@+id/button6"
            android:text="@string/number_6"
            app:layout_constraintBottom_toTopOf="@id/button9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button5"
            app:layout_constraintTop_toBottomOf="@id/button3" />

        <Button
            style="@style/PinPadButton"
            android:id="@+id/button7"
            android:text="@string/number_7"
            app:layout_constraintBottom_toTopOf="@id/button0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button8"
            app:layout_constraintTop_toBottomOf="@id/button4" />
        <Button
            style="@style/PinPadButton"
            android:id="@+id/button8"
            android:text="@string/number_8"
            app:layout_constraintBottom_toTopOf="@id/button0"
            app:layout_constraintEnd_toStartOf="@id/button9"
            app:layout_constraintStart_toEndOf="@id/button7"
            app:layout_constraintTop_toBottomOf="@id/button5" />
        <Button
            style="@style/PinPadButton"
            android:id="@+id/button9"
            android:text="@string/number_9"
            app:layout_constraintBottom_toTopOf="@id/button0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button8"
            app:layout_constraintTop_toBottomOf="@id/button6" />

        <Button
            style="@style/PinPadButton"
            android:id="@+id/button0"
            android:text="@string/number_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
